# app/Http/Controllers/ActivityController.php
@@ -22,6 +22,39 @@ class ActivityController extends Controller
         return view("activities.index", compact('activities', 'examen'));
     }
 
+         /**
+     * @OA\Get(
+     *      path="/examens",
+     *      operationId="getExamens",
+     *      tags={"Examens"},
+
+     *      summary="Get List Of Examens",
+     *      description="Returns all examens",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     * @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *  )
+     */
     public function getActivities()
     {
         $activities = Activity::all();
