# storage/api-docs/api-docs.json
@@ -19,6 +19,36 @@
         }
     ],
     "paths": {
+        "/examens": {
+            "get": {
+                "tags": [
+                    "Examens"
+                ],
+                "summary": "Get List Of Examens",
+                "description": "Returns all examens",
+                "operationId": "getExamens",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
         "/activities/user/{iduser}": {
             "get": {
                 "tags": [
@@ -77,6 +107,36 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
+        "/promotions": {
+            "get": {
+                "tags": [
+                    "Promotions"
+                ],
+                "summary": "Obtenir la liste des promotions",
+                "description": "Returns all Promotions",
+                "operationId": "getPromotions",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
